# adsentinel

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  QUICKSTART.md  README.md  SOP.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: default_profile.yaml
src/adsentinel/: __init__.py  __main__.py  cli.py  config.py  constants.py  exceptions.py  logging_config.py
src/adsentinel/auth/: manager.py
src/adsentinel/checks/: base.py  registry.py
src/adsentinel/checks/acl_dacl/: dangerous_aces.py
src/adsentinel/checks/adcs/: esc_checks.py
src/adsentinel/checks/authentication/: ntlm_config.py
src/adsentinel/checks/coercion/: coercion_checks.py
src/adsentinel/checks/dns_security/: zone_config.py
src/adsentinel/checks/gpo_security/: gpo_config.py
src/adsentinel/checks/hybrid_cloud/: hybrid_checks.py
src/adsentinel/checks/kerberos/: kerberoasting.py
src/adsentinel/checks/object_security/: object_config.py
src/adsentinel/checks/operational/: audit_policy.py  winrm_coverage.py
src/adsentinel/checks/password_policy/: domain_policy.py  fine_grained.py
src/adsentinel/checks/privileged_accounts/: builtin_groups.py
src/adsentinel/checks/replication/: dcsync.py
src/adsentinel/checks/sccm/: sccm_checks.py
src/adsentinel/checks/tiered_admin/: tier_checks.py
src/adsentinel/checks/trust_security/: trust_config.py
src/adsentinel/collectors/: acl_collector.py  base.py  certificates.py  computers.py  dns.py  domain_info.py  gpo.py  groups.py  password_policies.py  trusts.py  users.py  winrm_data.py
src/adsentinel/datasources/: base.py  ldap_source.py  winrm_source.py
src/adsentinel/engine/: context.py  plugin_loader.py  runner.py
src/adsentinel/models/: __init__.py  compliance.py  domain.py  finding.py  severity.py
src/adsentinel/reporting/: attack_paths.py  baseline.py  bloodhound_reporter.py  csv_reporter.py  docx_reporter.py  html_reporter.py  json_reporter.py  pdf_reporter.py  sarif_reporter.py
src/adsentinel/scoring/: posture.py
src/adsentinel/utils/: __init__.py  guid.py  ldap_filter.py  sddl.py  sid.py  time_utils.py  well_known.py
tests/: conftest.py
tests/unit/: test_auth.py  test_cli.py  test_config.py  test_datasources.py  test_engine.py  test_exceptions.py  test_models.py  test_phase4_features.py  test_reporters.py  test_scoring.py  test_utils.py
tests/unit/checks/: test_kerberos.py  test_password_policy.py  test_phase2_checks.py  test_phase3_checks.py  test_privileged_accounts.py
