[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adsentinel"
version = "1.0.0"
description = "Elite Active Directory Security Assessment Tool — 200+ checks, attack path analysis, AD CS ESC1-13, async execution, and enterprise reporting"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "legionultramax", email = "harsh@adsentinel.dev"},
]
keywords = ["active-directory", "security", "assessment", "ldap", "pentesting", "blue-team"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration :: Authentication/Directory :: LDAP",
]
dependencies = [
    "ldap3>=2.9.1",
    "pywinrm>=0.4.3",
    "click>=8.1",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "jinja2>=3.1",
    "structlog>=23.2",
    "rich>=13.7",
    "pyyaml>=6.0.1",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
kerberos = ["gssapi>=1.8; sys_platform != 'win32'", "winkerberos>=0.9; sys_platform == 'win32'"]
pdf = ["weasyprint>=60.0"]
vault = ["hvac>=2.1"]
azure = ["azure-identity>=1.15"]
crypto = ["cryptography>=41.0"]
all = ["adsentinel[kerberos,pdf,vault,azure,crypto]"]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "mypy>=1.8",
    "ruff>=0.2",
    "bandit>=1.7",
    "pre-commit>=3.6",
    "faker>=22.0",
]

[project.scripts]
adsentinel = "adsentinel.cli:cli"

[project.urls]
Homepage = "https://github.com/legionultramax/adsentinel"
Documentation = "https://github.com/legionultramax/adsentinel/docs"
Repository = "https://github.com/legionultramax/adsentinel"
Issues = "https://github.com/legionultramax/adsentinel/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "PT", "SIM", "TCH"]
ignore = ["S105", "S106", "S107"]  # Hardcoded password warnings (we handle creds securely)

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.bandit]
exclude_dirs = ["tests"]
